--- a/src/client/components/Navbar2/styles.css
+++ b/src/client/components/Navbar2/styles.css
@@ -2,7 +2,9 @@
 
 .container2 {
   background-color: #eee;
-  text-align: center;
+  text-align: left;
+  margin: 0px;
+  padding: 0px;
 }
 
 .nav {
@@ -17,10 +19,11 @@
 .navbar2 {
   /* display: flex; */
   /* align-items: center; */
-  margin: auto;
+  
   display: flex;
   align-items: center;
   padding: 0px 0px;
+  margin: 0px;
   
 
 }
