--- a/src/client/layout/styles.css
+++ b/src/client/layout/styles.css
@@ -18,7 +18,7 @@
   .top-row, .bottom-row   {
     color: white;
     background-color: black;
-    background-image: url("/background_footer_vbi.jpg");
+    background-image: url("/background_footer_vbi.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;    
