--- a/src/client/App.css
+++ b/src/client/App.css
@@ -2,6 +2,23 @@
     /* border: solid 1px green; */
   }
   
+  .MuiStepIcon-root.MuiStepIcon-active {
+    color: #333 !important;
+  }  
+
+  .MuiStepIcon-root.MuiStepIcon-completed {
+    color: #333 !important;
+  }
+
+  .MuiDropzoneArea-icon {
+    color: gray !important;
+  }
+
+  .MuiDropzoneArea-text {
+    color: gray !important;
+  }
+
+
   body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0px; /* reset */
