--- a/src/client/App.css
+++ b/src/client/App.css
@@ -3,11 +3,11 @@
   }
   
   .MuiStepIcon-root.MuiStepIcon-active {
-    color: #333 !important;
+    color: black !important;
   }  
 
   .MuiStepIcon-root.MuiStepIcon-completed {
-    color: #333 !important;
+    color: black !important;
   }
 
   .MuiDropzoneArea-icon {
