--- a/src/client/App.css
+++ b/src/client/App.css
@@ -22,8 +22,17 @@
   body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0px; /* reset */
-    background-color: black;
+    background-color: #eee;
   }
+
+
+  .globalWrap {
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+  }
+
+
 
   .maxScreenWidth {
     max-width: 1920px;
@@ -61,12 +70,14 @@
   }
 
 
+  .bottomWrap {
+    margin-top: auto;
+  }
 
   .mainWrap   {
     background-color: #eee;
     padding-left: 30px;
     padding-right: 30px;
-    min-height: 450px;
   }
 
 
