--- a/src/client/App.css
+++ b/src/client/App.css
@@ -20,7 +20,7 @@
 
   .MuiInputBase-inputAdornedEnd {
     color: gray !important;
-    /* width: 100px !important; */
+    width: 100px !important;
   }
 
 
