--- a/src/client/App.css
+++ b/src/client/App.css
@@ -2,25 +2,24 @@
     /* border: solid 1px green; */
   }
   
-  .MuiStepIcon-root.MuiStepIcon-active {
+  /* .MuiStepIcon-root.MuiStepIcon-active {
     color: black !important;
   }  
 
   .MuiStepIcon-root.MuiStepIcon-completed {
     color: black !important;
-  }
+  } */
 
   .MuiDropzoneArea-icon {
-    color: gray !important;
+    color: dimgray !important;
   }
 
   .MuiDropzoneArea-text {
-    color: gray !important;
+    color: dimgray !important;
   }
 
   .MuiInputBase-inputAdornedEnd {
-    color: gray !important;
-    /* width: 100px !important; */
+    color: dimgray !important;
   }
 
 
@@ -91,7 +90,7 @@
     flex-wrap: wrap;
     justify-content: space-between	;
     align-items: center;
-    border-bottom: solid 1px gray;
+    border-bottom: solid 1px dimgray;
   }
 
   .header {
@@ -150,7 +149,7 @@
     width: 100%;
     align-items: center;
     justify-content: center;
-    /* border-right: solid 1px gray; */
+    /* border-right: solid 1px dimgray; */
     /* padding: 0px 20px; */
     margin-left: 30px;
   }
@@ -174,7 +173,7 @@
   /* Style the footer */
   .footer1, .footer2 {
     height: 60px;
-    color: gray;
+    color: dimgray;
     font-weight: 600;
     font-size: 12px
   }
