--- a/src/client/App.css
+++ b/src/client/App.css
@@ -40,7 +40,7 @@
     color: white;
 
     background-color: black; /* para backup caso a imagem não carregue */
-    background-image: url("./example.png");
+    background-image: url("./shared/BackgroundVbi.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;  
