--- a/src/client/App.css
+++ b/src/client/App.css
@@ -96,7 +96,7 @@
     text-decoration: none;
     font-weight: 600;
     font-size: 1rem;
-    /* margin-right: 50px; */
+    margin-right: 15px;
   }
 
    .topNav > .active {
