--- a/src/client/App.css
+++ b/src/client/App.css
@@ -131,8 +131,8 @@
     text-align: left
   }
 
-  .footer1 {
-    border-bottom: solid 1px dimgray;
+  .footer2 {
+    border-top: solid 1px dimgray;
   }
 
 
