--- a/src/client/App.css
+++ b/src/client/App.css
@@ -113,10 +113,10 @@
     /* text-decoration: underline; */
   }
 
-  .topNav > a:hover {
-    color: lightgray;
-    border-bottom: solid lightgray 1px;  
-    padding: 15px 0px 14px;  
+  .topNav a:hover {
+    color: rgba(255, 255, 255, 0.7);
+    /* border-bottom: solid lightgray 1px;   */
+    /* padding: 15px 0px 14px;   */
   }
 
 
