--- a/src/client/App.css
+++ b/src/client/App.css
@@ -110,7 +110,7 @@
     flex-wrap: wrap;   
     justify-content: space-between;
     align-items: flex-end;
-    width: 100%;
+    /* width: 100%; */
     margin: 0;
     padding: 0px 0px;
   }  
@@ -124,7 +124,7 @@
     text-decoration: none;
     font-weight: 500;
     font-size: 1rem;
-    margin-right: 10px;
+    margin-right: 32px;
   }
 
 
