--- a/src/client/App.css
+++ b/src/client/App.css
@@ -128,11 +128,11 @@
   }
 
 
-  .hoverIconButton *  {  
+  .excelIconClass *  {  
     fill: dimgray;
   }
 
-  .hoverIconButton:hover *  {
+  .excelIconClass:hover *  {
     fill: #00b3f0;
   }
 
