--- a/src/client/App.css
+++ b/src/client/App.css
@@ -128,13 +128,10 @@
   }
 
 
-  .excelIconClass *  {  
+  /* .excelIconClass *  {  
     fill: dimgray;
-  }
-
-  /* .excelIconClass:hover *  {
-    fill: #00b3f0;
   } */
+
 
   .topNav > a:hover {
     border-bottom: solid  #00b3f0 2px;  
